A bit of organization

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
         <title>Muddle</title>
-        <link rel="stylesheet" href="muddle.css" />
+        <link rel="stylesheet" href="css/muddle.css" />
     </head>
     <body>
         <div id="muddle"></div>
